# MiraiChan

./: .gitignore  README.md  TODO.txt  bot.py  checker_factory.py  configloader.py  lagrange_extended_actions.py  launch.bat  main.py  pyproject.toml  requirement.txt  requirements.txt
_legacy/data/: akoperators.json  moe_attrs.json
_legacy/lemonyBot/: apps.py  base.py  utils.py
async_biliapis/: __init__.py  login.py
data/: moe_attrs.json  pinyin2ktkn.json
lemonyBot/: __init__.py  async_tools.py  base.py  bot.py  cqcode.py  objects.py
lemony_utils/: __init__.py  asyncutils.py  consts.py  templates.py
modules/: ncm.py  yiyan.py
modules/arknights/: data_fetcher.py
modules/bili_dynamic_listener/: __init__.py  bilidynamic.py
modules/bilibili_dynamic/: __init__.py  bilidynamic.py  requester.py
modules/draw_moe/: __init__.py  moe_attrs.py
modules/epidemic/: __init__.py
modules/epidemic_query/: __init__.py  epidemic.py  requester.py
modules/random_setu/: __init__.py  setuapi.py
modules/weather/: __init__.py  cityid.json  cityid.py  hanzi2number.py  weather.py
plugin/: pycqBot_notes.txt
plugin/BiliDynamicListener/: BiliDynamicListener.py  bilidynamic.py  wbi.py
plugin/EroPicSender/: EroPicSender.py
plugins/AliasProvider/: __init__.py  __plugin__.py
plugins/ArknightsGacha/: __init__.py  gacha.py  gacha_plugin.py  operator_lib.py  sample.html
plugins/BiliAPIProvider/: __init__.py  __init__.pyi  __plugin__.py  login.py  utils.py  wbi.py
plugins/BiliDynamicForwarder/: __init__.py  bili_plugin.py  bilidynamic.py  plugin_itself.py
plugins/BiliLinkRedirect/: __plugin__.py
plugins/BiliLogin/: __init__.py  login.py  login_plugin.py
plugins/CheckerProvider/: __init__.pyi  __plugin__.py
plugins/EroMoncak/: __plugin__.py  core.py
plugins/EroPicSender/: EroPicSender.py  __init__.py  setu_plugin.py  setuapi.py
plugins/Executor/: __plugin__.py
plugins/LagrExtActions/: __init__.py  __init__.pyi  __plugin__.py
plugins/LemonyUtils/: __init__.py  cookies.py  templates.py
plugins/MoeAttriLottery/: MoeAttriLottery.py  __init__.py  extractor.py  moe_plugin.py
plugins/OneBotInfoProvider/: __init__.pyi  __plugin__.py
plugins/Pooooke/: __plugin__.py
src/: bot.py  checker_factory.py  configloader.py  little_helper.py  multimedia_sslcontext.py  ob11adapter_validation_patches.py  recorder_models.py  walk_compress_sync_audios.py
src/arknights_datasource/: __init__.py
src/async_biliapis/: login.py
src/extended_actions/: lagrange.py
src/lemony_utils/: __init__.py  asyncutils.py  botutils.py  cookies.py  database.py  images.py  media.py  pinyin.py  templates.py  time.py
(+63 files in other folders)
