[project]
name = "MiraiChan"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "NingmengLemon", email = "60469383+NingmengLemon@users.noreply.github.com"},
]
dependencies = [
    "melobot[onebot]>=3.0.0rc12",
    "pypinyin>=0.53.0",
    "aiofiles>=24.1.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
start = {cmd = ["python", "bot.py"]}
dev = {cmd = ["watchfiles", "--filter", "python", "--target-type", "command", "pdm run start --debug"]}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "watchfiles>=0.24.0",
]
