[project]
name = "MiraiChan"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "NingmengLemon", email = "60469383+NingmengLemon@users.noreply.github.com" },
]
dependencies = [
    "melobot[onebot]>=3.1.0",
    "pypinyin>=0.53.0",
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.10",
    "pillow>=11.0.0",
    "qrcode>=8.0",
    "uvloop>=0.21.0; sys_platform != 'win32'",
    "pilmoji @ git+https://github.com/jay3332/pilmoji.git@2.0",
    "sqlmodel>=0.0.22",
    "graphviz>=0.20.3",
    "lxml>=5.3.0",
    "types-lxml>=2024.11.8",
    "types-aiofiles>=24.1.0.20240626",
    "pydantic>=2.10.3",
    "imagehash>=4.3.1",
    "romajitable>=0.0.1",
    "aiosqlite>=0.21.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm.scripts]
start = { cmd = ["python", "src/bot.py"] }
dev = { cmd = ["pdm", "run", "start", "--debug"] }


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "watchfiles>=0.24.0",
    "types-qrcode>=8.0.0.20241004",
]
